--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
                   </li>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="paginas/quienessomos.html">Quienes Somos</a>
+                  <a class="nav-link" href="paginas/quienesSomos.html">Quienes Somos</a>
                 </li>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="paginas/contactos.html">Contacto</a>
+                <a class="nav-link" href="paginas/contacto.html">Contacto</a>
               </li>
                 </ul>
               </div>
@@ -82,9 +82,9 @@
   <footer>
     <div class="redesSociales">
       <ul class="social-icons">
-        <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-        <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
-        <li><a href="https://wa.me/5492613063895?text=Por%20favor%20envianos%20tu%20consulta%20y%20te%20contestaremos%20a%20la%20brevedad"><i class="fa fa-whatsapp"></i></a></li>
+        <li><a href="https://www.instagram.com/gmgcarpinteria/" target="_blank"><i class="fa fa-instagram"></i></a></li>
+        <li><a href="https://www.facebook.com/gmg.metalurgica" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
+        <li><a href="https://wa.me/5492613063895" target="_blank"><i class="fa fa-whatsapp"></i></a></li>
       </ul>
     </div>
     
