--- a/index.html
+++ b/index.html
@@ -79,28 +79,37 @@
   </main>
     <!-- Carousel de Bootstrap -->
 
-    <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
+    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 3"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="6" aria-label="Slide 2"></button>
+      </div>
       <div class="carousel-inner">
         <div class="carousel-item active" data-bs-interval="5000">
-          <img src="/media/carrucel/1.jpg" class="d-block w-100" alt="img1">
+          <img src="media/carrusel/1.jpg" class="d-block w-100" alt="img1">
         </div>
         <div class="carousel-item" data-bs-interval="3000">
-          <img src="/media/carrucel/2.jpg" class="d-block w-100" alt="img2">
+          <img src="media/carrusel/2.jpg" class="d-block w-100" alt="img2">
         </div>
         <div class="carousel-item" data-bs-interval="5000">
-          <img src="/media/carrucel/3.jpg" class="d-block w-100" alt="img3">
+          <img src="media/carrusel/3.jpg" class="d-block w-100" alt="img3">
         </div>
         <div class="carousel-item" data-bs-interval="3000">
-          <img src="/media/carrucel/4.jpg" class="d-block w-100" alt="img4">
+          <img src="media/carrusel/4.jpg" class="d-block w-100" alt="img4">
         </div>
         <div class="carousel-item" data-bs-interval="5000">
-          <img src="/media/carrucel/5.jpg" class="d-block w-100" alt="img5">
+          <img src="media/carrusel/5.jpg" class="d-block w-100" alt="img5">
         </div>
         <div class="carousel-item" data-bs-interval="3000">
-          <img src="/media/carrucel/6.jpg" class="d-block w-100" alt="img6">
+          <img src="media/carrusel/6.jpg" class="d-block w-100" alt="img6">
         </div>
         <div class="carousel-item" data-bs-interval="5000">
-          <img src="/media/carrucel/7.jpg" class="d-block w-100" alt="img7">
+          <img src="media/carrusel/7.jpg" class="d-block w-100" alt="img7">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
