se generaron las galerias de dos paginas

--- a/paginas/lineaHerrero.html
+++ b/paginas/lineaHerrero.html
@@ -57,7 +57,7 @@
                   </li>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="quienesSomos.html">Quienes Somos</a>
+                  <a class="nav-link" href="lineaPremium.html">Linea Premium</a>
                 </li>
               </li>
               <li class="nav-item">
@@ -76,7 +76,7 @@
 
     <h2>HERRERO</h2>
 
-
+    
 
   
     <footer>
