--- a/paginas/lineaRotonda.html
+++ b/paginas/lineaRotonda.html
@@ -41,7 +41,7 @@
                     <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="lineaModena.html">Linea Modena</a>
+                    <a class="nav-link" href="lineaRotonda.html">Linea Rotonda</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="lineaHerrero.html">Linea Herrero</a>
@@ -57,7 +57,7 @@
                   </li>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="quienesSomos.html">Quienes Somos</a>
+                  <a class="nav-link" href="lineaPremium.html">Linea Premium</a>
                 </li>
               </li>
               <li class="nav-item">
@@ -68,15 +68,60 @@
              </div>
         </nav>
         
+      </header>
+      </main>
+    
         <h1>GMG Carpienteria de Aluminio</h1>    
-    </header>
-  </main>
 
+        <h2>ROTONDA</h2>
 
-
-<h2>ROTONDA</h2>
-
-
+        <section id="galeria" class="container">
+            <div class="text-center pt-5">
+                <h2>Galeria</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+            </div>
+            <div class="row">
+                <div class="col-lg-4 col-md-6 col-sm-12">
+                    <a href="../media/Rotonda/01.jpg" target="_blank">
+                       <img src="../media/Rotonda/01.jpg" alt="imagen linea Rotonda">
+                    </a>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12">
+                    <a href="../media/Rotonda/02.jpg" target="_blank">
+                        <img src="../media/Rotonda/02.jpg" alt="imagen linea Rotonda">
+                    </a>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12">
+                    <a href="../media/Rotonda/03.jpg" target="_blank">
+                        <img src="../media/Rotonda/03.jpg" alt="imagen linea Rotonda">
+                    </a>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12">
+                    <a href="../media/Rotonda/04.jpg" target="_blank">
+                        <img src="../media/Rotonda/04.jpg" alt="imagen linea Rotonda">
+                    </a>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12">
+                    <a href="../media/Rotonda/05.jpg" target="_blank">
+                        <img src="../media/Rotonda/05.jpg" alt="imagen linea Rotonda">
+                    </a>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12">
+                    <a href="../media/Rotonda/06.jpg" target="_blank">
+                        <img src="../media/Rotonda/06.jpg" alt="imagen linea Rotonda">
+                    </a>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12">
+                    <a href="../media/Rotonda/07.jpg" target="_blank">
+                        <img src="../media/Rotonda/07.jpg" alt="imagen linea Rotonda">
+                    </a>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12">
+                    <a href="../media/Rotonda/08.jpg" target="_blank">
+                        <img src="../media/Rotonda/08.jpg" alt="imagen linea Rotonda">
+                    </a>
+                </div>
+            </div>
 
   
     <footer>
