--- a/paginas/barandas.html
+++ b/paginas/barandas.html
@@ -57,7 +57,7 @@
                   </li>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="quienesSomos.html">Quienes Somos</a>
+                  <a class="nav-link" href="lineaPremium.html">Linea Premium</a>
                 </li>
               </li>
               <li class="nav-item">
