--- a/paginas/lineaModena.html
+++ b/paginas/lineaModena.html
@@ -74,9 +74,9 @@
 
 
 
-        <h2>MODENA</h2>
+      <h2>MODENA</h2>
 
-        <section id="galeria" class="container">
+      <section id="galeria" class="container">
             <div class="text-center pt-5">
                 <h2>Galeria</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
@@ -131,7 +131,7 @@
                 </div>
                 
             </div>    
-        </div>
+      </section>
 
     </main>
     <footer>
