se corrigio el error de css en el index

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <!-- link CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-    <link rel="stylesheet" href="../estilo.css"> 
+    <link rel="stylesheet" href="estilo.css"> 
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="../media/logoGMG.jpg" type="image/x-icon">
@@ -197,7 +197,7 @@
       
       
     </main>  
-    footer>
+    <footer>
         <div class="redesSociales">
         <ul class="social-icons">
             <li><a href="https://www.instagram.com/gmgcarpinteria/" target="_blank"><i class="fa fa-instagram"></i></a></li>
