se colocó el mapa y se ordenaron las dir del nav

--- a/paginas/lineaModena.html
+++ b/paginas/lineaModena.html
@@ -21,7 +21,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 
     <!-- titulo-->
-    <title>Home</title>
+    <title>Linea Modena 45°</title>
 </head>
 
 <body >
@@ -44,20 +44,20 @@
                     <a class="nav-link" href="lineaModena.html">Linea Modena</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="lineaHerrero.html">Linea Herrero</a>
+                    <a class="nav-link" href="lineaRotonda.html">Linea Rotonda</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="lineaRotonda.html">Linea Rotonda</a>
+                    <a class="nav-link" href="lineaHerrero.html">Linea Herrero</a>
+                  </li>
+                  <li class="nav-item"> 
+                    <a class="nav-link" href="lineaPremium.html">Linea Premium</a>
                   </li>
                   <li class="nav-item"> 
                     <a class="nav-link" href="mamparas.html">Mamparas de Baño</a>
                   </li>
-                  <li class="nav-item"> 
-                    <a class="nav-link" href="barandas.html">Barandas</a>
-                  </li>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="lineaPremium.html">Linea Premium</a>
+                  <a class="nav-link" href="barandas.html">Barandas</a>
                 </li>
               </li>
               <li class="nav-item">
@@ -74,11 +74,11 @@
 
 
 
-      <h2>MODENA</h2>
+      <h2>Linea Modena 45°</h2>
 
       <section id="galeria" class="container">
             <div class="text-center pt-5">
-                <h2>Galeria</h2>
+                <h2>Linea Modena 45°</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
             </div>
             <div class="row">
