--- a/paginas/lineaRotonda.html
+++ b/paginas/lineaRotonda.html
@@ -41,23 +41,23 @@
                     <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
                   </li>
                   <li class="nav-item">
+                    <a class="nav-link" href="lineaModena.html">Linea Modena</a>
+                  </li>
+                  <li class="nav-item">
                     <a class="nav-link" href="lineaRotonda.html">Linea Rotonda</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="lineaHerrero.html">Linea Herrero</a>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="lineaRotonda.html">Linea Rotonda</a>
+                  <li class="nav-item"> 
+                    <a class="nav-link" href="lineaPremium.html">Linea Premium</a>
                   </li>
                   <li class="nav-item"> 
                     <a class="nav-link" href="mamparas.html">Mamparas de Baño</a>
                   </li>
-                  <li class="nav-item"> 
-                    <a class="nav-link" href="barandas.html">Barandas</a>
-                  </li>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="lineaPremium.html">Linea Premium</a>
+                  <a class="nav-link" href="barandas.html">Barandas</a>
                 </li>
               </li>
               <li class="nav-item">
