--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 
     <header>
         <!-- Navegador de bootstrap-->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light ">
+            <div class="container ">
                 <a class="navbar-brand" href="index.html"><img src="media/logoGMG.jpg" alt="logo GMG"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -194,8 +194,8 @@
 
       <!-- Ubicación de Google maps -->
 
-      <div class="container col-lg-6 col-md-8 col-sm-12 mapa" >
-        <div class="row ">
+      <div class="container col-lg-6 col-md-8 col-sm-12 " >
+        <div class="row border 1px solid #4579ac !important">
           <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d209.05898675387866!2d-68.89397748803634!3d-33.031611383616394!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sar!4v1692933187432!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
       </div>
