se mejora la estética del home, se agrega marca de agua al carrucel y se agregan logos en el footer

--- a/paginas/barandas.html
+++ b/paginas/barandas.html
@@ -29,7 +29,7 @@
 
     <header>
         <!-- Navegador de bootstrap-->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light bg-white">
             <div class="container-fluid">
               <a class="navbar-brand" href="../index.html"><img src="../media/logoGMG.jpg" alt="logo GMG"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -80,13 +80,27 @@
 
   
     <footer>
-        <div class="redesSociales">
+      <!-- Redes Sociales -->
+      <div class="redesSociales">
         <ul class="social-icons">
             <li><a href="https://www.instagram.com/gmgcarpinteria/" target="_blank"><i class="fa fa-instagram"></i></a></li>
             <li><a href="https://www.facebook.com/gmg.metalurgica" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
             <li><a href="https://wa.me/5492613063895" target="_blank"><i class="fa fa-whatsapp"></i></a></li>
         </ul>
-        </div>
+      </div>
+
+      <!-- Logos de empresas -->
+      <div class=" container logos"  > 
+          <img class ="logo_imagen" src="/media/iconos/adhesil.png" alt="logo adhesil">
+          <img class ="logo_imagen" src="/media/iconos/alcemar.png" alt="logo alcemar">
+          <img class ="logo_imagen" src="/media/iconos/aluar.png" alt="logo aluar">
+          <img class ="logo_imagen" src="/media/iconos/bestchem.png" alt="logo bestchem">
+          <img class ="logo_imagen" src="/media/iconos/hunter.png" alt="logo hunter">
+          <img class ="logo_imagen" src="/media/iconos/kalciyan.png" alt="logo kalciyan">
+          <img class ="logo_imagen" src="/media/iconos/tanit.png" alt="logo tanit">
+          <img class ="logo_imagen" src="/media/iconos/TDA.png" alt="logo TDA">
+          <img class ="logo_imagen" src="/media/iconos/vasa.png" alt="logo vasa">
+      </div>
     </footer>
   
   <!-- Scipt de Bootstrap -->
