se elimina el acceso a las paginas de Premium, barandas y mampara

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <li class="nav-item">
                             <a class="nav-link" href="paginas/lineaHerrero.html">línea Herrero</a>
                         </li>
-                        <li class="nav-item"> 
+                        <!-- <li class="nav-item"> 
                             <a class="nav-link" href="paginas/lineaPremium.html">línea Premium</a>
                           </li>
                           <li class="nav-item">
@@ -57,7 +57,7 @@
                           </li>
                         <li class="nav-item"> 
                             <a class="nav-link" href="paginas/barandas.html">Barandas</a>
-                        </li>
+                        </li> -->
                         <li class="nav-item">
                             <a class="nav-link" href="paginas/contacto.html">Contacto</a>
                         </li>
@@ -217,15 +217,15 @@
 
       <!-- Logos de empresas -->
       <div class=" container logos"  > 
-          <img class ="logo_imagen" src="/media/iconos/adhesil.png" alt="logo adhesil">
-          <img class ="logo_imagen" src="/media/iconos/alcemar.png" alt="logo alcemar">
-          <img class ="logo_imagen" src="/media/iconos/aluar.png" alt="logo aluar">
-          <img class ="logo_imagen" src="/media/iconos/bestchem.png" alt="logo bestchem">
-          <img class ="logo_imagen" src="/media/iconos/hunter.png" alt="logo hunter">
-          <img class ="logo_imagen" src="/media/iconos/kalciyan.png" alt="logo kalciyan">
-          <img class ="logo_imagen" src="/media/iconos/tanit.png" alt="logo tanit">
-          <img class ="logo_imagen" src="/media/iconos/TDA.png" alt="logo TDA">
-          <img class ="logo_imagen" src="/media/iconos/vasa.png" alt="logo vasa">
+          <img class ="logo_imagen" src="media/iconos/adhesil.png" alt="logo adhesil">
+          <img class ="logo_imagen" src="media/iconos/alcemar.png" alt="logo alcemar">
+          <img class ="logo_imagen" src="media/iconos/aluar.png" alt="logo aluar">
+          <img class ="logo_imagen" src="media/iconos/bestchem.png" alt="logo bestchem">
+          <img class ="logo_imagen" src="media/iconos/hunter.png" alt="logo hunter">
+          <img class ="logo_imagen" src="media/iconos/kalciyan.png" alt="logo kalciyan">
+          <img class ="logo_imagen" src="media/iconos/tanit.png" alt="logo tanit">
+          <img class ="logo_imagen" src="media/iconos/TDA.png" alt="logo TDA">
+          <img class ="logo_imagen" src="media/iconos/vasa.png" alt="logo vasa">
       </div>
 
         
