--- a/paginas/lineaPremium.html
+++ b/paginas/lineaPremium.html
@@ -91,16 +91,16 @@
 
       <!-- Logos de empresas -->
       <div class=" container logos"  > 
-          <img class ="logo_imagen" src="/media/iconos/adhesil.png" alt="logo adhesil">
-          <img class ="logo_imagen" src="/media/iconos/alcemar.png" alt="logo alcemar">
-          <img class ="logo_imagen" src="/media/iconos/aluar.png" alt="logo aluar">
-          <img class ="logo_imagen" src="/media/iconos/bestchem.png" alt="logo bestchem">
-          <img class ="logo_imagen" src="/media/iconos/hunter.png" alt="logo hunter">
-          <img class ="logo_imagen" src="/media/iconos/kalciyan.png" alt="logo kalciyan">
-          <img class ="logo_imagen" src="/media/iconos/tanit.png" alt="logo tanit">
-          <img class ="logo_imagen" src="/media/iconos/TDA.png" alt="logo TDA">
-          <img class ="logo_imagen" src="/media/iconos/vasa.png" alt="logo vasa">
-      </div>
+        <img class ="logo_imagen" src="../media/iconos/adhesil.png" alt="logo adhesil">
+        <img class ="logo_imagen" src="../media/iconos/alcemar.png" alt="logo alcemar">
+        <img class ="logo_imagen" src="../media/iconos/aluar.png" alt="logo aluar">
+        <img class ="logo_imagen" src="../media/iconos/bestchem.png" alt="logo bestchem">
+        <img class ="logo_imagen" src="../media/iconos/hunter.png" alt="logo hunter">
+        <img class ="logo_imagen" src="../media/iconos/kalciyan.png" alt="logo kalciyan">
+        <img class ="logo_imagen" src="../media/iconos/tanit.png" alt="logo tanit">
+        <img class ="logo_imagen" src="../media/iconos/TDA.png" alt="logo TDA">
+        <img class ="logo_imagen" src="../media/iconos/vasa.png" alt="logo vasa">
+    </div>
 
         
         
