--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <!-- link CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="stylesheet" href="estilo.css"> 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="../media/logoGMG.jpg" type="image/x-icon">
@@ -31,7 +33,7 @@
         <!-- Navegador de bootstrap-->
         <nav class="navbar navbar-expand-lg navbar-light bg-white ">
             <div class="container ">
-                <a class="navbar-brand" href="index.html"><img src="media/logoGMG.jpg" alt="logo GMG"></a>
+                <a class="navbar-brand logo_logo" href="index.html"><img src="media/logoGMG.jpg" alt="logo GMG"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -49,7 +51,7 @@
                         <li class="nav-item">
                             <a class="nav-link" href="paginas/lineaHerrero.html">línea Herrero</a>
                         </li>
-                        <!-- <li class="nav-item"> 
+                        <li class="nav-item"> 
                             <a class="nav-link" href="paginas/lineaPremium.html">línea Premium</a>
                           </li>
                           <li class="nav-item">
@@ -57,7 +59,7 @@
                           </li>
                         <li class="nav-item"> 
                             <a class="nav-link" href="paginas/barandas.html">Barandas</a>
-                        </li> -->
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link" href="paginas/contacto.html">Contacto</a>
                         </li>
