--- a/paginas/lineaPremium.html
+++ b/paginas/lineaPremium.html
@@ -13,6 +13,8 @@
 <!-- link CSS -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 <link rel="stylesheet" href="../estilo.css"> 
+ <!--Link animated  -->
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 
 <!-- Favicon -->
 <link rel="shortcut icon" href="../media/logoGMG.jpg" type="image/x-icon">
@@ -30,8 +32,8 @@
     <header>
         <!-- Navegador de bootstrap-->
         <nav class="navbar navbar-expand-lg navbar-light bg-white">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="../index.html"><img src="../media/logoGMG.jpg" alt="logo GMG"></a>
+            <div class="container">
+                <a class="navbar-brand logo_logo" href="../index.html"><img src="../media/logoGMG.jpg" alt="logo GMG"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
