terminado de subir las imagenes

--- a/paginas/lineaPremium.html
+++ b/paginas/lineaPremium.html
@@ -41,26 +41,26 @@
                       </li>
                       <li class="nav-item">
                           <a class="nav-link" href="lineaModena.html">Linea Modena</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="lineaRotonda.html">Linea Rotonda</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="lineaHerrero.html">Linea Herrero</a>
-                </li>
-                <li class="nav-item"> 
-                  <a class="nav-link" href="lineaPremium.html">Linea Premium</a>
-                </li>
-                <li class="nav-item"> 
-                  <a class="nav-link" href="mamparas.html">Mamparas de Baño</a>
-                </li>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="barandas.html">Barandas</a>
-              </li>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contacto.html">Contacto</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="lineaRotonda.html">Linea Rotonda</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="lineaHerrero.html">Linea Herrero</a>
+                        </li>
+                        <li class="nav-item"> 
+                          <a class="nav-link" href="lineaPremium.html">Linea Premium</a>
+                        </li>
+                        <li class="nav-item"> 
+                          <a class="nav-link" href="mamparas.html">Mamparas de Baño</a>
+                        </li>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="barandas.html">Barandas</a>
+                      </li>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="contacto.html">Contacto</a>
                       </li>
                   </ul>
               </div>
@@ -84,21 +84,22 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
             </div>
             <div class="row">
-                <div class="col-lg-3 col-md-6 col-sm-12">
+                <div class="col-lg-4 col-md-6 col-sm-8">
                     <a href="../media/premium/01.jpg" target="_blank">
                         <img src="../media/premium/01.jpg" alt="imagen linea premium">
                     </a>
                 </div>
-                <div class="col-lg-3 col-md-6 col-sm-12">
+                <div class="col-lg-4 col-md-6 col-sm-8">
                     <a href="../media/premium/02.jpg" target="_blank">
                         <img src="../media/premium/02.jpg" alt="imagen linea premium">
                     </a>
                 </div>
-                <div class="col-lg-3 col-md-6 col-sm-12">
+                <div class="col-lg-4 col-md-6 col-sm-8">
                     <a href="../media/premium/03.jpg" target="_blank">
                         <img src="../media/premium/03.jpg" alt="imagen linea premium">
                     </a>
-                <!-- </div>
+                </div>
+                <!-- 
                 <div class="col-lg-3 col-md-6 col-sm-12">
                     <a href="../media//04.jpg" target="_blank">
                         <img src="../media//04.jpg" alt="imagen linea premium">
