Se agrega comentarios en las paginas de los productos

--- a/paginas/lineaHerrero.html
+++ b/paginas/lineaHerrero.html
@@ -76,13 +76,15 @@
     <div class="container-1">
       
       <h1>GMG Carpinteria de Aluminio</h1>    
-      <h2>HERRERO</h2>
 
       <!-- Galeria de fotos -->
       <section id="galeria" class="container">
         <div class="text-center pt-5">
-            <h2>Galeria</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+            <h2>Línea Herrero</h2>
+            <p class="description">Es un sistema mediano de diseño clásico, el más tradicional en el mercado de aberturas adaptable a todas las necesidades, 
+              con un sistema de cierre central manual y tiradores laterales. 
+              El sistema mediano posee un tipo de perfil que contiene menos espesor que las demás líneas, pero con la misma calidad.
+            </p>
         </div>
         <div class="row">
             <div class="col-lg-4 col-md-6 col-sm-12">
