--- a/paginas/lineaPremium.html
+++ b/paginas/lineaPremium.html
@@ -76,13 +76,15 @@
       <div class="container-1">
         <h1>GMG Carpienteria de Aluminio</h1>    
 
-        <h2>Línea Premium</h2>
-
         <!-- Galeria de fotos -->
         <section id="galeria" class="container">
             <div class="text-center pt-5">
-                <h2>Galeria</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                <h2>Línea Premium</h2>
+                <p class="description">El sistema de alta prestación, MASS R60, es la evolución en simplicidad, diseño, funcionalidad y calidad.
+                  Es un verdadero sistema integrado con soluciones globales, con una amplia gama de complementos y accesorios 
+                  adaptables a cualquier situación estética, de confort, de ahorro energético y seguridad. 
+                  Le brinda al arquitecto una serie de opciones para cada necesidad del proyecto.
+                   </p>
             </div>
             <div class="row">
                 <div class="col-lg-4 col-md-6 col-sm-8">
@@ -100,6 +102,16 @@
                         <img src="../media/premium/03.jpg" alt="imagen linea premium">
                     </a>
                 </div>
+                <div class="col-lg-4 col-md-6 col-sm-8">
+                  <a href="../media/premium/04.jpg" target="_blank">
+                      <img src="../media/premium/04.jpg" alt="imagen linea premium">
+                  </a>
+              </div>
+              <div class="col-lg-4 col-md-6 col-sm-8">
+                  <a href="../media/premium/05.jpg" target="_blank">
+                      <img src="../media/premium/05.jpg" alt="imagen linea premium">
+                  </a>
+              </div>
                 <!-- 
                 <div class="col-lg-3 col-md-6 col-sm-12">
                     <a href="../media//04.jpg" target="_blank">
