--- a/paginas/lineaRotonda.html
+++ b/paginas/lineaRotonda.html
@@ -80,13 +80,15 @@
     <div class="container-1">
       <h1>GMG Carpienteria de Aluminio</h1>    
   
-      <h2>ROTONDA</h2>
-  
       <!-- Galeria de fotos -->
       <section id="galeria" class="container">
           <div class="text-center pt-5">
-              <h2>Galeria</h2>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+              <h2>Línea Rotonda 640</h2>
+              <p class="description">La Serie 640 responde a las nuevas tendencias de los profesionales de la arquitectura. 
+                Su diseño de anticipación y sus terminaciones son un ejemplo de la evolución de este 
+                sistema. Delicadas formas redondas, robustez y sobriedad, visión coplanar: características 
+                de un producto superior. 
+              </p>
           </div>
           <div class="row">
               <div class="col-lg-4 col-md-6 col-sm-12">
