--- a/paginas/barandas.html
+++ b/paginas/barandas.html
@@ -82,7 +82,7 @@
         <section id="galeria" class="container">
               <div class="text-center pt-5">
                   <h2>Barandas de escaleras y balcones</h2>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                  <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p> -->
               </div>
               <div class="row">
                   <div class="col-lg-4 col-md-6 col-sm-12">
