--- a/paginas/mamparas.html
+++ b/paginas/mamparas.html
@@ -79,7 +79,7 @@
         <section id="galeria" class="container">
           <div class="text-center pt-5">
             <h2>Mamparas para baños</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+            <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p> -->
           </div>
           <div class="row">
             <div class="col-lg-4 col-md-6 col-sm-12">
