se agregan fotos se cambia el celular

--- a/paginas/lineaPremium.html
+++ b/paginas/lineaPremium.html
@@ -112,33 +112,24 @@
                       <img src="../media/premium/05.jpg" alt="imagen linea premium">
                   </a>
               </div>
-                <!-- 
-                <div class="col-lg-3 col-md-6 col-sm-12">
-                    <a href="../media//04.jpg" target="_blank">
-                        <img src="../media//04.jpg" alt="imagen linea premium">
-                    </a>
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-12">
-                    <a href="../media//05.jpg" target="_blank">
-                        <img src="../media//05.jpg" alt="imagen linea premium">
-                    </a>
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-12">
-                    <a href="../media//06.jpg" target="_blank">
-                        <img src="../media//06.jpg" alt="imagen linea premium">
-                    </a>
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-12">
-                    <a href="../media//07.jpg" target="_blank">
-                        <img src="../media//07.jpg" alt="imagen linea premium">
-                    </a>
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-12">
-                    <a href="../media//08.jpg" target="_blank">
-                        <img src="../media//08.jpg" alt="imagen linea premium">
-                    </a>
-                </div> -->
-              </div>  
+                 
+              <div class="col-lg-4 col-md-6 col-sm-8">
+                  <a href="../media/premium/06.jpg" target="_blank">
+                      <img src="../media/premium/06.jpg" alt="imagen linea premium">
+                  </a>
+              </div>
+              <div class="col-lg-4 col-md-6 col-sm-8">
+                  <a href="../media/premium/07.jpg" target="_blank">
+                      <img src="../media/premium/07.jpg" alt="imagen linea premium">
+                  </a>
+              </div>
+              <div class="col-lg-4 col-md-6 col-sm-8">
+                  <a href="../media/premium/08.jpg" target="_blank">
+                      <img src="../media/premium/08.jpg" alt="imagen linea premium">
+                  </a>
+              </div>
+               
+            </div>  
           </section>
         </div>
     </main>
@@ -148,7 +139,7 @@
         <ul class="social-icons">
             <li><a href="https://www.instagram.com/gmgcarpinteria/" target="_blank"><i class="fa fa-instagram"></i></a></li>
             <li><a href="https://www.facebook.com/gmg.metalurgica" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
-            <li><a href="https://wa.me/5492613063895" target="_blank"><i class="fa fa-whatsapp"></i></a></li>
+            <li><a href="https://wa.me/5492616503730" target="_blank"><i class="fa fa-whatsapp"></i></a></li>
         </ul>
       </div>
 
