--- a/paginas/lineaRotonda.html
+++ b/paginas/lineaRotonda.html
@@ -143,10 +143,18 @@
       <ul class="social-icons">
           <li><a href="https://www.instagram.com/gmgcarpinteria/" target="_blank"><i class="fa fa-instagram"></i></a></li>
           <li><a href="https://www.facebook.com/gmg.metalurgica" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
-          <li><a href="https://wa.me/5492616503730" target="_blank"><i class="fa fa-whatsapp"></i></a></li>
+          <li><a href="https://wa.me/+5492616503730" target="_blank"><i class="fa fa-whatsapp"></i></a></li>
       </ul>
     </div>
-
+    <div>
+    </div>
+    
+    <!-- Dirección de la empresa y teléfono -->
+    <div class="datosEmpresa">
+      <h6>Dirección: Chile 589 Luján de Cuyo - Mendoza </h6>
+      <h6>Teléfono de contacto: +549-2616-503-730</h6>
+    </div>  
+    
     <!-- Logos de empresas -->
     <div class=" container logos"  > 
       <img class ="logo_imagen" src="../media/iconos/adhesil.png" alt="logo adhesil">
@@ -158,6 +166,12 @@
       <img class ="logo_imagen" src="../media/iconos/tanit.png" alt="logo tanit">
       <img class ="logo_imagen" src="../media/iconos/TDA.png" alt="logo TDA">
       <img class ="logo_imagen" src="../media/iconos/vasa.png" alt="logo vasa">
+    </div>
+
+    <div class="datosPersonales">
+      <h6 >Prodcucido por: GABRIEL DENITA</h6>
+      <h6>Contacto: +549-2613-063-895</h6>
+      <a href="https://wa.me/+5492613063895" target="_blank"><i class="fa fa-whatsapp"></i></a>
     </div>
   </footer>
   
