--- a/paginas/lineaRotonda.html
+++ b/paginas/lineaRotonda.html
@@ -46,16 +46,16 @@
               <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="lineaModena.html">Linea Modena</a>
+              <a class="nav-link" href="lineaModena.html">Línea Modena</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="lineaRotonda.html">Linea Rotonda</a>
+              <a class="nav-link" href="lineaRotonda.html">Línea Rotonda</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="lineaHerrero.html">Linea Herrero</a>
+              <a class="nav-link" href="lineaHerrero.html">Línea Herrero</a>
             </li>
             <li class="nav-item"> 
-              <a class="nav-link" href="lineaPremium.html">Linea Premium</a>
+              <a class="nav-link" href="lineaPremium.html">Línea Premium</a>
             </li>
             <li class="nav-item"> 
               <a class="nav-link" href="mamparas.html">Mamparas de Baño</a>
@@ -93,42 +93,42 @@
           <div class="row">
               <div class="col-lg-4 col-md-6 col-sm-12">
                   <a href="../media/rotonda/01.jpg" target="_blank">
-                      <img src="../media/rotonda/01.jpg" alt="imagen linea Rotonda">
+                      <img src="../media/rotonda/01.jpg" alt="imagen Línea Rotonda">
                   </a>
               </div>
               <div class="col-lg-4 col-md-6 col-sm-12">
                   <a href="../media/rotonda/02.jpg" target="_blank">
-                      <img src="../media/rotonda/02.jpg" alt="imagen linea Rotonda">
+                      <img src="../media/rotonda/02.jpg" alt="imagen Línea Rotonda">
                   </a>
               </div>
               <div class="col-lg-4 col-md-6 col-sm-12">
                   <a href="../media/rotonda/03.jpg" target="_blank">
-                      <img src="../media/rotonda/03.jpg" alt="imagen linea Rotonda">
+                      <img src="../media/rotonda/03.jpg" alt="imagen Línea Rotonda">
                   </a>
               </div>
               <div class="col-lg-4 col-md-6 col-sm-12">
                   <a href="../media/rotonda/04.jpg" target="_blank">
-                      <img src="../media/rotonda/04.jpg" alt="imagen linea Rotonda">
+                      <img src="../media/rotonda/04.jpg" alt="imagen Línea Rotonda">
                   </a>
               </div>
               <div class="col-lg-4 col-md-6 col-sm-12">
                   <a href="../media/rotonda/05.jpg" target="_blank">
-                      <img src="../media/rotonda/05.jpg" alt="imagen linea Rotonda">
+                      <img src="../media/rotonda/05.jpg" alt="imagen Línea Rotonda">
                   </a>
               </div>
               <div class="col-lg-4 col-md-6 col-sm-12">
                   <a href="../media/rotonda/06.jpg" target="_blank">
-                      <img src="../media/rotonda/06.jpg" alt="imagen linea Rotonda">
+                      <img src="../media/rotonda/06.jpg" alt="imagen Línea Rotonda">
                   </a>
               </div>
               <div class="col-lg-4 col-md-6 col-sm-12">
                   <a href="../media/rotonda/07.jpg" target="_blank">
-                      <img src="../media/rotonda/07.jpg" alt="imagen linea Rotonda">
+                      <img src="../media/rotonda/07.jpg" alt="imagen Línea Rotonda">
                   </a>
               </div>
               <div class="col-lg-4 col-md-6 col-sm-12">
                   <a href="../media/rotonda/08.jpg" target="_blank">
-                      <img src="../media/rotonda/08.jpg" alt="imagen linea Rotonda">
+                      <img src="../media/rotonda/08.jpg" alt="imagen Línea Rotonda">
                   </a>
               </div>
             </div>  
@@ -152,8 +152,10 @@
     <!-- Dirección de la empresa y teléfono -->
     <div class="datosEmpresa">
       <h6>Dirección: Chile 589 Luján de Cuyo - Mendoza </h6>
-      <h6>Teléfono de contacto: +549-2616-503-730</h6>
-    </div>  
+      <h6>
+        <a class="telefono" href="tel:+549-2616-503-730">Contacto: +549-2616-503-730</a>
+      </h6>
+    </div>    
     
     <!-- Logos de empresas -->
     <div class=" container logos"  > 
@@ -169,8 +171,10 @@
     </div>
 
     <div class="datosPersonales">
-      <h6 >Prodcucido por: GABRIEL DENITA</h6>
-      <h6>Contacto: +549-2613-063-895</h6>
+      <p>Desarrollado por: GABRIEL DENITA</p>
+      <p>
+        <a class="telefono" href="tel:+549-2613-063-895">Contacto: +549-2613-063-895</a>
+      </p>
       <a href="https://wa.me/+5492613063895" target="_blank"><i class="fa fa-whatsapp"></i></a>
     </div>
   </footer>
