--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="../media/logoGMG.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="../media/logoGMG.webp" type="image/x-icon">
 
     <!-- link Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
@@ -34,7 +34,7 @@
         <!-- Navegador de bootstrap-->
         <nav class="navbar navbar-expand-lg navbar-light bg-white ">
             <div class="container ">
-                <a class="navbar-brand logo_logo" href="index.html"><img src="media/logoGMG.jpg" alt="logo GMG"></a>
+                <a class="navbar-brand logo_logo" href="index.html"><img src="media/logoGMG.webp" alt="logo GMG"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -86,13 +86,14 @@
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="7" aria-label="Slide 8"></button>
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="8" aria-label="Slide 9"></button>
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="9" aria-label="Slide 10"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="10" aria-label="Slide 11"></button>
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active" data-bs-interval="4000">
             <img src="media/carrusel/1.webp" class="d-block w-100" alt="img1">
           </div>
           <div class="carousel-item" data-bs-interval="4000">
-            <img src="media/carrusel/2.jpg" class="d-block w-100" alt="img2">
+            <img src="media/carrusel/2.webp" class="d-block w-100" alt="img2">
           </div>
           <div class="carousel-item" data-bs-interval="4000">
             <img src="media/carrusel/3.jpg" class="d-block w-100" alt="img3">
@@ -117,6 +118,9 @@
           </div>
           <div class="carousel-item" data-bs-interval="4000">
             <img src="media/carrusel/10.jpg" class="d-block w-100" alt="img10">
+          </div>
+          <div class="carousel-item" data-bs-interval="4000">
+            <img src="media/carrusel/11.jpg" class="d-block w-100" alt="img11">
           </div>
         </div>
       </div>
