--- a/paginas/lineaPremium.html
+++ b/paginas/lineaPremium.html
@@ -19,7 +19,7 @@
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 
       <!-- Favicon -->
-      <link rel="shortcut icon" href="../media/logoGMG.jpg" type="image/x-icon">
+      <link rel="shortcut icon" href="../media/logoGMG.webp" type="image/x-icon">
 
       <!-- link Bootstrap-->
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
@@ -31,7 +31,7 @@
       <!-- Navegador de bootstrap-->
       <nav class="navbar navbar-expand-lg navbar-light bg-white">
           <div class="container">
-              <a class="navbar-brand logo_logo" href="../index.html"><img src="../media/logoGMG.jpg" alt="logo GMG"></a>
+              <a class="navbar-brand logo_logo" href="../index.html"><img src="../media/logoGMG.webp" alt="logo GMG"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
               </button>
@@ -139,7 +139,7 @@
         <ul class="social-icons">
             <li><a href="https://www.instagram.com/gmgcarpinteria/" target="_blank"><i class="fa fa-instagram"></i></a></li>
             <li><a href="https://www.facebook.com/gmg.metalurgica" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
-            <li><a href="https://wa.me/+5492616503730" target="_blank"><i class="fa fa-whatsapp"></i></a></li>
+            <li><a href="https://wa.me/+5492616503730" target="_blank"class="pegado"><i class="fa fa-whatsapp"></i></a></li>
         </ul>
       </div>
       <div>
