--- a/paginas/lineaPremium.html
+++ b/paginas/lineaPremium.html
@@ -28,45 +28,58 @@
 
   <body >
     <header>
-      <!-- Navegador de bootstrap-->
-      <nav class="navbar navbar-expand-lg navbar-light bg-white">
-          <div class="container">
-              <a class="navbar-brand logo_logo" href="../index.html"><img src="../media/logoGMG.webp" alt="logo GMG"></a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                  <ul class="navbar-nav">
-                      <li class="nav-item">
-                          <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
-                      </li>
-                      <li class="nav-item">
-                          <a class="nav-link" href="lineaModena.html">Línea Modena</a>
-                        </li>
+      <!-- Dirección de la empresa y teléfono -->
+      <div class="datosEmpresa">
+        <h6>Dirección: Chile 589 Luján de Cuyo - Mendoza </h6>
+        <div class="whatsaap">
+          <ul class="social-icons">
+              <li><a href="https://wa.me/+5492616503730" target="_blank" ><i class="fa fa-whatsapp"></i></a></li>
+          </ul>
+        </div>
+        <h6>
+          <a class="telefono" href="tel:+549-2616-503-730">Contacto: +549-2616-503-730</a>
+        </h6>
+      </div>
+        <!-- Navegador de bootstrap-->
+        <nav class="navbar navbar-expand-lg navbar-light bg-white ">
+            <div class="container ">
+                <a class="navbar-brand logo_logo" href="../index.html"><img src="../media/logoGMG.webp" alt="logo GMG"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
                         <li class="nav-item">
-                          <a class="nav-link" href="lineaRotonda.html">Línea Rotonda</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="lineaHerrero.html">Línea Herrero</a>
+                            <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
                         </li>
                         <li class="nav-item"> 
-                          <a class="nav-link" href="lineaPremium.html">Línea Premium</a>
-                        </li>
+                            <a class="nav-link" href="lineaPremium.html">Línea Premium</a>
+                          </li>
                         <li class="nav-item"> 
-                          <a class="nav-link" href="mamparas.html">Mamparas de Baño</a>
+                          <a class="nav-link" href="similMadera.html">Simil Madera</a>
                         </li>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="barandas.html">Barandas</a>
-                      </li>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="contacto.html">Contacto</a>
-                      </li>
-                  </ul>
-              </div>
-          </div>
-      </nav>
+                        <li class="nav-item">
+                            <a class="nav-link" href="lineaModena.html">Línea Modena</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="lineaRotonda.html">Línea Rotonda</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="lineaHerrero.html">Línea Herrero</a>
+                        </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="mamparas.html">Mamparas de Baño</a>
+                          </li>
+                        <li class="nav-item"> 
+                            <a class="nav-link" href="barandas.html">Barandas</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contacto.html">Contacto</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
         
     </header>
 
@@ -87,6 +100,51 @@
                    </p>
             </div>
             <div class="row">
+                <div class="col-lg-4 col-md-6 col-sm-8">
+                  <a href="../media/premium/videlo01.mp4" target="_blank">
+                      <img src="../media/premium/video-01.jpg" alt="imagen Línea premium">
+                  </a>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-8">
+                  <a href="../media/premium/09.webp" target="_blank">
+                      <img src="../media/premium/09.webp" alt="imagen Línea premium">
+                  </a>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-8">
+                  <a href="../media/premium/10.webp" target="_blank">
+                      <img src="../media/premium/10.webp" alt="imagen Línea premium">
+                  </a>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-8">
+                  <a href="../media/premium/11.webp" target="_blank">
+                      <img src="../media/premium/11.webp" alt="imagen Línea premium">
+                  </a>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-8">
+                  <a href="../media/premium/12.webp" target="_blank">
+                      <img src="../media/premium/12.webp" alt="imagen Línea premium">
+                  </a>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-8">
+                  <a href="../media/premium/13.webp" target="_blank">
+                      <img src="../media/premium/13.webp" alt="imagen Línea premium">
+                  </a>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-8">
+                  <a href="../media/premium/14.webp" target="_blank">
+                      <img src="../media/premium/14.webp" alt="imagen Línea premium">
+                  </a>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-8">
+                  <a href="../media/premium/15.webp" target="_blank">
+                      <img src="../media/premium/15.webp" alt="imagen Línea premium">
+                  </a>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-8">
+                  <a href="../media/premium/16.webp" target="_blank">
+                      <img src="../media/premium/16.webp" alt="imagen Línea premium">
+                  </a>
+                </div>
                 <div class="col-lg-4 col-md-6 col-sm-8">
                     <a href="../media/premium/01.jpg" target="_blank">
                         <img src="../media/premium/01.jpg" alt="imagen Línea premium">
@@ -139,7 +197,7 @@
         <ul class="social-icons">
             <li><a href="https://www.instagram.com/gmgcarpinteria/" target="_blank"><i class="fa fa-instagram"></i></a></li>
             <li><a href="https://www.facebook.com/gmg.metalurgica" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
-            <li><a href="https://wa.me/+5492616503730" target="_blank"class="pegado"><i class="fa fa-whatsapp"></i></a></li>
+            <!-- <li><a href="https://wa.me/+5492616503730" target="_blank"class="pegado"><i class="fa fa-whatsapp"></i></a></li> -->
         </ul>
       </div>
       <div>
